--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <style>
         body {
             padding: 25px;
-            background-color: white;
+            background-color: black;
             color: black;
             font-size: 25px;
         }
  
         .dark-mode {
             background-color: black;
-            color: white;
+            color: black;
         }
  
         .light-mode {
-            background-color: white;
+            background-color: black;
             color: black;
         }
     </style>
