--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             padding: 25px;
             background-color: black;
-            color: black;
+            color: rgb(255, 255, 255);
             font-size: 25px;
         }
  
