--- a/index.html
+++ b/index.html
@@ -4,24 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeSpace</title>
-    <style>
-        body {
-            padding: 25px;
-            background-color: black;
-            color: rgb(255, 255, 255);
-            font-size: 25px;
-        }
- 
-        .dark-mode {
-            background-color: black;
-            color: black;
-        }
- 
-        .light-mode {
-            background-color: black;
-            color: black;
-        }
-    </style>
+    <link rel="stylesheet" href="Darkmode.css">
 </head>
 <body>
     <center><h1>CodeSpace</h1></center>
